--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="chat-container">
         <button id="chat-toggle">Chat</button>
         <div id="chat-box">
-            <!-- Aquí colocarás el contenido del chat, como mensajes, etc. -->
+            <!-- Acá colocas el contenido del chat, como mensajes, etc. -->
         </div>
     </div>
 
