--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                 <a href="#">Gmail</a>
             </div>
         </div>
+        <div>
+            <button type="button" onclick="location.href='pagina_de_registro.html'">Registrarse</button>
+        <a href="pagina_de_registro.html" class="btn">Registrarse</a>
+        </div>
     </nav>
-
     <main>
         <section>
             <h2>Contenido Principal</h2>
@@ -95,11 +98,11 @@
                     <br>
                 </section>
          <head>
-        <style>
+               <style>
                             .centrado {
                                 text-align: center;
                             }
-                    </style>
+                </style>
          </head>
             <p class="centrado"> Este es un ejemplo de contenido en mi página web. </p>
     </main>
