--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <title>CodeCrafters</title>
     <link rel="icon" href="img/Logo_Codecrafters.png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodeCrafters</title>
+    <style>
+        .centrado {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <a class="logo">
-            <img src="./img/logo_Codecrafters.png" alt="Logo_Codecrafters">
-            <h2 class="nombre-compañia">Code<br>Crafters </h2>
-        <br>
+        <a href="/" class="logo">
+            <img src="img/logo_Codecrafters.png" alt="Logo_Codecrafters">
+            <h2 class="nombre-compañia">Code<br>Crafters</h2>
         </a>
         <div class="search-container">
             <form action="/buscar" method="get">
-            <input type="text" name="q" placeholder="Buscar " class="search-box">
-            <button type="button">
-                <img src="./img/buscar.png" alt="buscar" >
-            </button>
+                <input type="text" name="q" placeholder="Buscar" class="search-box">
+                <button type="button">
+                    <img src="img/buscar.png" alt="buscar">
+                </button>
             </form>
         </div>
     </header>
 
     <nav class="navbar">
         <div class="dropdown">
-            <button class="dropbtn" type="submit">Productos</button>
+            <button class="dropbtn" type="button">Productos</button>
             <div class="dropdown-content">
-                <a href="#">Perifericos</a>
+                <a href="#">Periféricos</a>
                 <a href="#">Hardware</a>
                 <a href="#">Accesorios</a>
             </div>
@@ -44,7 +49,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn" type="submit">Contacto</button>
+            <button class="dropbtn" type="button">Contacto</button>
             <div class="dropdown-content">
                 <a href="#">Whatsapp</a>
                 <a href="#">Gmail</a>
@@ -52,61 +57,56 @@
         </div>
         <div>
             <button type="button" onclick="location.href='pagina_de_registro.html'">Registrarse</button>
-        <a href="pagina_de_registro.html" class="btn">Registrarse</a>
         </div>
     </nav>
+
     <main>
         <section>
             <h2>Contenido Principal</h2>
-                <section>
-                    <div class="dropdown">
-                        <img src="./img/mouse.png" alt="Mouse">
-                        <div class="dropdown-content">
+            <section>
+                <div class="dropdown">
+                    <img src="img/mouse.png" alt="Mouse">
+                    <div class="dropdown-content">
                         <p>Descripción del Mouse</p>
-                        </div>
-                        <h4 class="container">Mouse</h4>
                     </div>
-                    <div class="dropdown">
-                        <img src="./img/teclado.png" alt="Teclado">
-                        <div class="dropdown-content">
+                    <h4 class="container">Mouse</h4>
+                </div>
+                <div class="dropdown">
+                    <img src="img/teclado.png" alt="Teclado">
+                    <div class="dropdown-content">
                         <p>Descripción del Teclado</p>
-                        </div>
-                        <h4 class="container">Teclado</h4>
                     </div>
-                    <div class="dropdown">
-                        <img src="./img/memoria.png" alt="Memoria Ram">
-                        <div class="dropdown-content">
+                    <h4 class="container">Teclado</h4>
+                </div>
+                <div class="dropdown">
+                    <img src="img/memoria.png" alt="Memoria Ram">
+                    <div class="dropdown-content">
                         <p>Descripción de la Memoria Ram</p>
-                        </div>
-                        <h4 class="container">Memoria Ram</h4>
                     </div>
-                    <div class="dropdown">
-                        <img src="./img/video.png" alt="Placa de Video">
-                        <div class="dropdown-content">
+                    <h4 class="container">Memoria Ram</h4>
+                </div>
+                <div class="dropdown">
+                    <img src="img/video.png" alt="Placa de Video">
+                    <div class="dropdown-content">
                         <p>Descripción de la Placa de Video</p>
-                        </div>
-                        <h4 class="container">Placa de Video</h4>
                     </div>
-                    <div class="dropdown">
-                        <img src="./img/disco.png" alt="Disco SSD">
-                        <div class="dropdown-content">
+                    <h4 class="container">Placa de Video</h4>
+                </div>
+                <div class="dropdown">
+                    <img src="img/disco.png" alt="Disco SSD">
+                    <div class="dropdown-content">
                         <p>Descripción del Disco SSD</p>
-                        </div>
-                        <h4 class="container">Disco SSD</h4>
                     </div>
-                </section>
-                    <br>
-                </section>
-         <head>
-               <style>
-                            .centrado {
-                                text-align: center;
-                            }
-                </style>
-         </head>
-            <p class="centrado"> Este es un ejemplo de contenido en mi página web. </p>
+                    <h4 class="container">Disco SSD</h4>
+                </div>
+            </section>
+        </section>
+        <br>
+        <p class="centrado">Este es un ejemplo de contenido en mi página web.</p>
     </main>
+
     <script src="script.js"></script>
+    
     <footer>
         <p>&copy; 2024 Mi Página Web </p>
     </footer>
