--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>CodeCrafters Venta de insumos para PC</title>
+    <title>CodeCrafters Venta de insumos para PC y más</title>
     <link rel="icon" href="img/Logo_Codecrafters.png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
@@ -21,19 +21,27 @@
         <div class="search-container">
             <form action="/buscar" method="get">
                 <input type="text" name="q" placeholder="Buscar" class="search-box">
-                <button type="submit"> <!-- Cambiado type a submit -->
+                <button type="submit"> 
                     <img src="img/buscar.png" alt="buscar">
                 </button>
             </form>
         </div>
     </header>
-
+<br>
     <nav class="navbar">
         <div class="dropdown">
             <button class="dropbtn" type="button">Productos</button>
             <div class="dropdown-content">
                 <a href="#">Periféricos</a>
                 <a href="#">Hardware</a>
+                <a href="#">Accesorios</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn" type="button">Conectividad</button>
+            <div class="dropdown-content">
+                <a href="#">Servicio de Internet</a>
+                <a href="#">Asesoria de Conectividad</a>
                 <a href="#">Accesorios</a>
             </div>
         </div>
@@ -55,7 +63,7 @@
             </div>
         </div>
         <div class="dropdown">
-            <button class="dropbtn" type="button" onclick="location.href='pagina_de_registro.html'">Registrarse</button>
+            <button class="dropbtn" type="button" onclick="location.href='pagina_de_registro.html'">Registrate</button>
         </div>
     </nav>
 
