--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="es">
 <head>
     <title>CodeCrafters Venta de insumos para PC y más</title>
-    <link rel="icon" href="img/Logo_Codecrafters.png">
+    <link rel="icon" href="./img/Logo Codecrafters.png">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .centrado {
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
-    <header>
-        <a href="/" class="logo">
-            <img src="img/logo_Codecrafters.png" alt="Logo_Codecrafters">
-            <h2 class="nombre-compañia">Code<br>Crafters</h2>
+    <header class="header">
+        <a href="index.html" class="logo">
+            <img src="./img/Logo Codecrafters.png" alt="Logo_Codecrafters">
         </a>
-        <div class="search-container">
-            <form action="/buscar" method="get">
-                <input type="text" name="q" placeholder="Buscar" class="search-box">
-                <button type="submit">
-                    <img src="img/buscar.png" alt="buscar">
-                </button>
-            </form>
+        <img src="./img/codecrafters letra.png" alt="Imagen PNG" class="png-image">
+        <div class="container">
+            <input type="text" placeholder="Buscar">
+            <div class="btn">
+                <i class="fa fa-search"></i>
+            </div>
+        </div>
+        <div class="register-container">
+            <button class="register-btn" type="button" onclick="location.href='pagina_de_registro.html'">Registrate</button>
+        </div>
+        <div class="iniciar-sesion">
+            <button class="iniciar-btn" type="button" onclick="location.href='inicio_sesion.html'">Inicia Sesión</button>
         </div>
     </header>
 <br>
@@ -62,9 +62,6 @@
                 <a href="#">Gmail</a>
             </div>
         </div>
-        <div class="dropdown">
-            <button class="dropbtn" type="button" onclick="location.href='pagina_de_registro.html'">Registrate</button>
-        </div>
     </nav>
 
     <main>
@@ -74,35 +71,35 @@
                 <div class="dropdown">
                     <img src="img/mouse.png" alt="Mouse">
                     <div class="dropdown-content">
-                        <p>Descripción del Mouse</p>
+                        <p> Mouse logitech m325 mouse óptico inalámbrico</p>
                     </div>
                     <h4 class="container">Mouse</h4>
                 </div>
                 <div class="dropdown">
                     <img src="img/teclado.png" alt="Teclado">
                     <div class="dropdown-content">
-                        <p>Descripción del Teclado</p>
+                        <p>Teclado Gamer</p>
                     </div>
                     <h4 class="container">Teclado</h4>
                 </div>
                 <div class="dropdown">
                     <img src="img/memoria.png" alt="Memoria Ram">
                     <div class="dropdown-content">
-                        <p>Descripción de la Memoria Ram</p>
+                        <p>Memoria RAM PC Gamer Kingston Fury Beast DDR5 16GB 4800MHz DIMM CL38 1.1V</p>
                     </div>
                     <h4 class="container">Memoria Ram</h4>
                 </div>
                 <div class="dropdown">
                     <img src="img/video.png" alt="Placa de Video">
                     <div class="dropdown-content">
-                        <p>Descripción de la Placa de Video</p>
+                        <p>Placa Video MSI GTX1050Ti Gaming 4G</p>
                     </div>
                     <h4 class="container">Placa de Video</h4>
                 </div>
                 <div class="dropdown">
                     <img src="img/disco.png" alt="Disco SSD">
                     <div class="dropdown-content">
-                        <p>Descripción del Disco SSD</p>
+                        <p>Disco SSD Kingston A400 240GB, SATA3, 2.5"</p>
                     </div>
                     <h4 class="container">Disco SSD</h4>
                 </div>
