--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -3,26 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="registro.css">
-    <title>Pagina de registro</title>
+    <title>Iniciar Sesión</title>
+    <link rel="stylesheet" href="inicio.css">
 </head>
 <body>
-    <div class="registro">
-    <h1>Registrarse</h1>
+    <div class="formulario">
+    <h1>Inicio de sesión</h1>
     <form method="post">
         <div class="username">
             <input type="text" required>
             <label>Nombre de usuario</label>
         </div>
         <div class="username">
-            <input type="password" minlength="8" required>
+            <input type="password" required>
             <label>Contraseña</label>
         </div>
-        <div class="username">
-            <input type="email" required>
-            <label>Email</label>
-        </div>
-        <input type="submit" value="Registrarse">
+        <div class="recordar">¿Olvido su contraseña?</div>
+        <input type="submit" value="Iniciar">
         </div>
     </form>
 </body>
