--- a/index.html
+++ b/index.html
@@ -66,40 +66,40 @@
 
     <main>
         <section>
-            <h2>Contenido Principal</h2>
+            <h2>Productos Más Vendidos</h2>
             <section>
                 <div class="dropdown">
                     <img src="img/mouse.png" alt="Mouse">
                     <div class="dropdown-content">
-                        <p> Mouse logitech m325 mouse óptico inalámbrico</p>
+                        <p class="centrado" > Mouse logitech m325 mouse óptico inalámbrico</p>
                     </div>
                     <h4 class="container">Mouse</h4>
                 </div>
                 <div class="dropdown">
                     <img src="img/teclado.png" alt="Teclado">
                     <div class="dropdown-content">
-                        <p>Teclado Gamer</p>
+                        <p class="centrado">Teclado gamer HyperX Alloy Origins Core QWERTY Red inglés US color negro con luz RGB</p>
                     </div>
                     <h4 class="container">Teclado</h4>
                 </div>
                 <div class="dropdown">
                     <img src="img/memoria.png" alt="Memoria Ram">
                     <div class="dropdown-content">
-                        <p>Memoria RAM PC Gamer Kingston Fury Beast DDR5 16GB 4800MHz DIMM CL38 1.1V</p>
+                        <p class="centrado">Memoria RAM PC Gamer Kingston Fury Beast DDR5 16GB 4800MHz DIMM CL38 1.1V</p>
                     </div>
                     <h4 class="container">Memoria Ram</h4>
                 </div>
                 <div class="dropdown">
                     <img src="img/video.png" alt="Placa de Video">
                     <div class="dropdown-content">
-                        <p>Placa Video MSI GTX1050Ti Gaming 4G</p>
+                        <p class="centrado">Placa de video Nvidia MSI Gaming X GeForce 10 Series GTX 1050 Ti GEFORCE GTX 1050 TI GAMING X 4G 4GB</p>
                     </div>
                     <h4 class="container">Placa de Video</h4>
                 </div>
                 <div class="dropdown">
                     <img src="img/disco.png" alt="Disco SSD">
                     <div class="dropdown-content">
-                        <p>Disco SSD Kingston A400 240GB, SATA3, 2.5"</p>
+                        <p class="centrado">Disco sólido interno Kingston SA400S37/960G SATA 960GB negro</p>
                     </div>
                     <h4 class="container">Disco SSD</h4>
                 </div>
