--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="description" content="Esta pagina se encarga de la venta de perifericos de PC, venta de servicios de internet y asesoramientos">
+    <meta name="keywords" content="perifericos, Perifericos, mouse, placa de video, disco ssd, disco, internet, memoria, memoria ram, monitor, monitor pc">
 </head>
 <body>
     <header class="header">
