--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>CodeCrafters Venta de insumos para PC y más</title>
+    <title>CodeCrafters Venta de Perifericos de PC y Servicios de Internet</title>
     <link rel="icon" href="./img/Logo Codecrafters.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="Esta pagina se encarga de la venta de perifericos de PC, venta de servicios de internet y asesoramientos">
-    <meta name="keywords" content="perifericos, Perifericos, mouse, placa de video, disco ssd, disco, internet, memoria, memoria ram, monitor, monitor pc">
+    <meta name="description" content="Esta pagina se encarga de la venta de perifericos de PC, venta de servicios de internet y asesoramientos">
+    <meta name="keywords" content="perifericos, Perifericos, mouse, placa de video, disco ssd, disco, internet, memoria, memoria ram, monitor, monitor pc, servicio de internet">
 </head>
 <body>
     <header class="header">
         <a href="index.html" class="logo">
             <img src="./img/Logo Codecrafters.png" alt="Logo_Codecrafters">
         </a>
-        <img src="./img/codecrafters letra.png" alt="Imagen PNG" class="png-image">
+            <img src="./img/codecrafters letras.png" alt="Imagen PNG" class="png-image">
         <div class="container">
             <input type="text" placeholder="Buscar">
             <div class="btn">
@@ -104,6 +104,13 @@
                         <p class="centrado">Disco sólido interno Kingston SA400S37/960G SATA 960GB negro</p>
                     </div>
                     <h4 class="container">Disco SSD</h4>
+                </div>
+                <div class="dropdown">
+                    <img src="img/monitor.png" alt="Monitor de PC">
+                    <div class="dropdown-content">
+                    <p class="centrado">Monitor Gamer Aoc 24 Fhd G2490vx 144hz 1ms Amd Freesync Color Negro</p>
+                    </div>
+                    <h4 class="container">Monitor de PC</h4>
                 </div>
             </section>
         </section>
