--- a/pagina_de_registro.html
+++ b/pagina_de_registro.html
@@ -4,26 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="registro.css">
-    <title>Pagina de registro</title>
+    <title>Página de registro</title>
+    <script>
+        function validarFormulario() {
+            var checkboxTerminos = document.getElementById("terminos-condiciones");
+            
+            if (!checkboxTerminos.checked) {
+                alert("Debe aceptar los términos y condiciones antes de enviar el formulario.");
+                return false; // Evita que el formulario se envíe
+            }
+            
+            return true; // Permite enviar el formulario si se han aceptado los términos
+        }
+    </script>
 </head>
 <body>
     <div class="registro">
-    <h1>Registrarse</h1>
-    <form method="post">
-        <div class="username">
-            <input type="text" required>
-            <label>Nombre de usuario</label>
-        </div>
-        <div class="username">
-            <input type="password" minlength="8" required>
-            <label>Contraseña</label>
-        </div>
-        <div class="username">
-            <input type="email" required>
-            <label>Email</label>
-        </div>
-        <input type="submit" value="Registrarse">
-        </div>
-    </form>
+        <h1>Registrarse</h1>
+        <form method="post" action="#" onsubmit="return validarFormulario()">
+            <div class="username">
+                <input type="text" required>
+                <label>Nombre de usuario</label>
+            </div>
+            <div class="username">
+                <input type="password" minlength="8" required>
+                <label>Contraseña</label>
+            </div>
+            <div class="username">
+                <input type="email" required>
+                <label>Email</label>
+            </div>
+            <div class="form_input">
+                <label>
+                    <input type="checkbox" id="terminos-condiciones" name="terminos_y_condiciones" required>
+                    Acepto los <a href="term.html" target="_blank">Términos y Condiciones</a>
+                </label>
+            </div>
+            <div>
+                <input type="submit" value="Registrarse">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
+
