--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="dropdown">
             <button class="dropbtn" type="button">Conectividad</button>
             <div class="dropdown-content">
-                <a href="#">Servicio de Internet</a>
+                <a href="internet.html">Servicio de Internet</a>
                 <a href="#">Asesoria de Conectividad</a>
                 <a href="#">Accesorios</a>
             </div>
