--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
     <script src="script.js"></script>
 
     <footer>
+        <button class="iniciar-btn2" type="button" onclick="location.href='registrode_postulante.html'">Trabajar en C.C</button>
         <p>&copy; 2024 Mi Página Web </p>
     </footer>
 </body>
