--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
     <script src="script.js"></script>
 
     <footer>
+        <div class="footer">
+            <ul  class="footer-ul">
+                <li><a href="empresa.htlm">Acerca de la empresa</a></li>
+                <li><a href="term.html">Términos y condiciones</a></li>
+                <li><a href="trabajar.html">Trabajar con nosotros</a></li>
+                <p>2024 Copyright CodeCrafters</p>
+        </div> 
+        
         <button class="iniciar-btn2" type="button" onclick="location.href='registrode_postulante.html'">Trabajar en C.C</button>
         <p>&copy; 2024 Mi Página Web </p>
     </footer>
