--- a/index.html
+++ b/index.html
@@ -127,11 +127,12 @@
                 <li><a href="empresa.htlm">Acerca de la empresa</a></li>
                 <li><a href="term.html">Términos y condiciones</a></li>
                 <li><a href="trabajar.html">Trabajar con nosotros</a></li>
-                <p>2024 Copyright CodeCrafters</p>
-        </div> 
-        
-        <button class="iniciar-btn2" type="button" onclick="location.href='registrode_postulante.html'">Trabajar en C.C</button>
-        <p>&copy; 2024 Mi Página Web </p>
+                </ul>
+        </div>
+        <br>
+        <button class="iniciar-btn2" type="button" onclick="location.href='registrode_postulante.html'">Trabaja con Nosotros </button>
+        <br>
+        <h3>&copy; 2024 Mi Página Web </h3>
     </footer>
 </body>
 </html>
