--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="./img/Logo Codecrafters.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Esta pagina se encarga de la venta de perifericos de PC, venta de servicios de internet y asesoramientos">
@@ -123,16 +124,50 @@
 
     <footer>
         <div class="footer">
-            <ul  class="footer-ul">
-                <li><a href="empresa.htlm">Acerca de la empresa</a></li>
-                <li><a href="term.html">Términos y condiciones</a></li>
-                <li><a href="trabajar.html">Trabajar con nosotros</a></li>
-                </ul>
-        </div>
-        <br>
-        <button class="iniciar-btn2" type="button" onclick="location.href='registrode_postulante.html'">Trabaja con Nosotros </button>
-        <br>
-        <h3>&copy; 2024 Mi Página Web </h3>
+            <div class="footer__link">
+                <div class="link">
+                    <h3>PRODUCTOS</h3>
+                    <ul>
+                        <li><a href="#">Hardware</a></li>
+                        <li><a href="#">Software</a></li>
+                        <li><a href="#">Periféricos</a></li>
+                        <li><a href="#">Servicios</a></li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <h3>VENTAS</h3>
+                    <ul>
+                        <li><a href="#">Preguntas frecuentes</a></li>
+                        <li><a href="#">Medios de pago</a></li>
+                        <li><a href="#">Envios</a></li>                        
+                    </ul>
+                </div>
+                <div class="link">
+                    <h3>EMPRESA</h3>
+                    <ul>
+                        <li><a href="quienessomos.html">Acerca de nosotros</a></li>
+                        <li><a href="term.html">Términos y condiciones</a></li> 
+                        <li><a href="#">Políticas de Privacidad</a></li> 
+                    </ul>
+                </div>
+                <div class="link">
+                    <h3>SEGUINOS</h3>
+                    <div class="social">
+                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="#"><i class="fab fa-x"></i></a>
+                        <a href="#"><i class="fab fa-tiktok"></i></a>
+                    </div>                   
+                    
+                </div>
+            </div>
+            <hr>
+            <div class="footer__txt">
+                <p>®Copyright 2024- Todos los derechos reservados</p>
+            </div>
+            </div>            
+        </div>        
     </footer>
 </body>
 </html>
