--- a/quienessomos.html
+++ b/quienessomos.html
@@ -19,7 +19,7 @@
         <p class="card_content">Disponemos con un staff de profesionales preparado para atender los requerimentos de nuestros clientes, ofrecemos venta online y atencion personalizada en nuestro local comercial</p>
         <p class="card_content">Contamos con la representación de las principales marcas del mercado y nuestras ventas cuentan con garantía oficial y
             asesoramiento personalizado</p>        
-
+    </div>
 </body>
 
 </html>
