Se agregaron los html y css de terminos y condiciones y de politicas de privacidad
Signed-off-by: Dandel67 <127786097+Dandel67@users.noreply.github.com>

--- a/term.html
+++ b/term.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="term.css">
     <title>Términos y Condiciones</title>
 </head>
 <body>
     <div>
         <a href="term.html" download>Descargar Terminos y Condiciones</a>
     </div>
-    <h1>Términos y Condiciones - CodeCrafters</h1>
+    <h1><u>Términos y Condiciones - CodeCrafters</u></h1>
     <ol>
         <li>
             <h2>Introducción</h2>
-            <p>Bienvenido a [CodeCrafters], operador del sitio web [www.ccrafters.com]. Los siguientes términos y condiciones rigen su uso de nuestro sitio web y los servicios que ofrecemos.</p>
+            <p>Bienvenido a Codecrafters, operador del sitio <a href="index.html">CodeCrafters</a>. Los siguientes términos y condiciones rigen su uso de nuestro sitio web y los servicios que ofrecemos.</p>
         </li>
         <li>
             <h2>Aceptación de los Términos</h2>
@@ -33,7 +34,7 @@
         </li>
         <li>
             <h2> Política de Privacidad</h2>
-            <p>El uso de nuestro sitio web está sujeto a nuestra Política de Privacidad, que puede revisar [Aqui]</p>
+            <p>El uso de nuestro sitio web está sujeto a nuestra Política de Privacidad, que puede revisar <a href="pprivacidad.html">Politicas de Privacidad</a></p>
         </li>
         <li>
             <h2>Limitación de Responsabilidad</h2>
@@ -41,7 +42,7 @@
         </li>
         <li>
             <h2>Ley Aplicable</h2>
-            <p>Estos términos y condiciones se rigen por las leyes de [Argentina] y cualquier disputa relacionada con estos términos y condiciones estará sujeta a la jurisdicción exclusiva de los tribunales de [Buenos Aires], [Argentina]</p>
+            <p>Estos términos y condiciones se rigen por las leyes de [Argentina] y cualquier disputa relacionada con estos términos y condiciones estará sujeta a la jurisdicción exclusiva de los tribunales de Buenos Aires, Argentina</p>
         </li>
         <li>
             <h2>Cambios en los Términos y Condiciones</h2>
@@ -49,7 +50,7 @@
         </li>
         <li>
             <h2> Contacto</h2>
-            <p>Si tiene alguna pregunta sobre estos términos y condiciones, puede comunicarse con nosotros a través de [soporte@ccrafters.com].</p>
+            <p>Si tiene alguna pregunta sobre estos términos y condiciones, puede comunicarse con nosotros a través de <a href="soporte@ccrafters.com">soporte@ccrafters.com</a>.</p>
         </li>
     </ol>
 </body>
