--- a/index.html
+++ b/index.html
@@ -139,15 +139,15 @@
                     <ul>
                         <li><a href="#">Preguntas frecuentes</a></li>
                         <li><a href="#">Medios de pago</a></li>
-                        <li><a href="#">Envios</a></li>                        
+                        <li><a href="#">Envios</a></li>
                     </ul>
                 </div>
                 <div class="link">
                     <h3>EMPRESA</h3>
                     <ul>
                         <li><a href="quienessomos.html">Acerca de nosotros</a></li>
-                        <li><a href="term.html">Términos y condiciones</a></li> 
-                        <li><a href="#">Políticas de Privacidad</a></li> 
+                        <li><a href="term.html">Términos y condiciones</a></li>
+                        <li><a href="pprivacidad.html">Políticas de Privacidad</a></li>
                     </ul>
                 </div>
                 <div class="link">
@@ -158,16 +158,15 @@
                         <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
                         <a href="#"><i class="fab fa-x"></i></a>
                         <a href="#"><i class="fab fa-tiktok"></i></a>
-                    </div>                   
-                    
+                    </div>
                 </div>
             </div>
             <hr>
             <div class="footer__txt">
                 <p>®Copyright 2024- Todos los derechos reservados</p>
             </div>
-            </div>            
-        </div>        
+            </div>
+        </div>
     </footer>
 </body>
 </html>
