--- a/term.html
+++ b/term.html
@@ -36,7 +36,7 @@
         </li>
         <li>
             <p><strong>Uso Aceptable</strong></p>
-            <p>TUsted acepta utilizar nuestro sitio web de manera legal y ética y no utilizarlo para ningún propósito
+            <p>Usted acepta utilizar nuestro sitio web de manera legal y ética y no utilizarlo para ningún propósito
                 ilegal o no autorizado.</p>
         </li>
         <li>
@@ -64,7 +64,7 @@
         <li>
             <p><strong> Contacto</strong></p>
             <p>Si tiene alguna pregunta sobre estos términos y condiciones, puede comunicarse con nosotros a través de
-                <a href="soporte@ccrafters.com">soporte@ccrafters.com</a>.
+                <a href="soporte@thecodecrafters.netlify.app">soporte@thecodecrafters.netlify.app</a>.
             </p>
         </li>
     </ol>
