--- a/quienessomos.html
+++ b/quienessomos.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="card">
-        <img class="card_img" src="./logo/logo.png" alt="Logo de la tienda">
+        <img class="card_img" src="./logo/logo.webp" alt="Logo de la tienda">
         <h1 class="card_title">Codecrafters</h1>
         <h2 class="card_subtitle">Sobre Nosotros</h2>
         <p class="card_content">Somos una empresa de venta y servicios en el rubro informático con amplia trayectoria en
