--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
             <p>En <a href="index.html">CodeCrafters</a>, respetamos su privacidad y nos comprometemos a proteger la
                 información
                 personal que pueda proporcionarnos mientras utiliza nuestro sitio web <a
-                    href="index.html">CodeCrafters.com</a>
+                    href="index.html">thecodecrafters.netlify.app</a>
                 y nuestros servicios relacionados. Esta Política de Privacidad describe cómo recopilamos, utilizamos y
                 protegemos la información que recopilamos.</p>
         </li>
