--- a/envios.html
+++ b/envios.html
@@ -12,11 +12,11 @@
 
     <p><strong>Retira en Sucursal</strong></p>
     <p>Una vez que un pedido haya quedado confirmado y el importe de su factura aprobado, salvo que existan inconvenientes excepcionales para la aceptación del pedido por parte de XTR, que le serán debidamente comunicados, recibirá un correo electrónico en el plazo de las 24 horas confirmando que la operación ha sido exitosa. Si el Usuario no recibe tal notificación vía correo electrónico deberá contactarse con CODE CRAFTERS a fin de constatar que no hubo errores de registro al ingresar la casilla de correo. En el caso de operaciones de "Retira en Sucursal", recibirá un email de confirmación indicando que ya puede retirar el pedido. Una vez que reciba el e-mail de confirmación de su compra podrá dirigirse a la sucursal, con el comprobante de la compra efectuada impreso, y retirar su pedido. Cuando se presente en la sucursal, deberá dirigirse al sector de Cajas, donde deberá presentar:
-
-        •	DNI de la persona autorizada a retirar el pedido.
-        •	Mail de confirmación de compra, que incluye el número de pedido.
-        •	Medios de contacto con CODE CRAFTERS.
-        •	En compras online de sábado, domingos y feriados, los pedidos podrán ser retirados   el día hábil siguiente, en los horarios de atención de CODE CRAFTERS, una vez que reciba el email de confirmación de su compra.
+    <ul>
+        <li>DNI de la persona autorizada a retirar el pedido.</li>	
+        <li>Mail de confirmación de compra, que incluye el número de pedido.</li>	
+        <li>Medios de contacto con THE CODECRAFTERS.</li>	
+        <li>En compras online de sábado, domingos y feriados, los pedidos podrán ser retirados   el día hábil siguiente, en los horarios de atención de CODE CRAFTERS, una vez que reciba el email de confirmación de su compra.</li><br>
 
         En el acto de la entrega se le exhibirá al cliente el estado de la mercadería y los accesorios que vienen con esta, debiendo el comprador (o la persona autorizada por este, en su caso) verificar que la mercadería entregada corresponde a los artículos incluidos en el pedido y en la factura que se le presentará en el acto de entrega. La firma del remito y/o el comprobante de pago implicará declaración de conformidad con la mercadería entregada, sin perjuicio de los derechos que le pudieren corresponder en caso de que la misma resultara por algún motivo defectuosa.
         </p>
