--- a/envios.html
+++ b/envios.html
@@ -18,17 +18,17 @@
         <li>Medios de contacto con THE CODECRAFTERS.</li>	
         <li>En compras online de sábado, domingos y feriados, los pedidos podrán ser retirados   el día hábil siguiente, en los horarios de atención de CODE CRAFTERS, una vez que reciba el email de confirmación de su compra.</li><br>
 
-        En el acto de la entrega se le exhibirá al cliente el estado de la mercadería y los accesorios que vienen con esta, debiendo el comprador (o la persona autorizada por este, en su caso) verificar que la mercadería entregada corresponde a los artículos incluidos en el pedido y en la factura que se le presentará en el acto de entrega. La firma del remito y/o el comprobante de pago implicará declaración de conformidad con la mercadería entregada, sin perjuicio de los derechos que le pudieren corresponder en caso de que la misma resultara por algún motivo defectuosa.
-        </p>
+    En el acto de la entrega se le exhibirá al cliente el estado de la mercadería y los accesorios que vienen con esta, debiendo el comprador (o la persona autorizada por este, en su caso) verificar que la mercadería entregada corresponde a los artículos incluidos en el pedido y en la factura que se le presentará en el acto de entrega. La firma del remito y/o el comprobante de pago implicará declaración de conformidad con la mercadería entregada, sin perjuicio de los derechos que le pudieren corresponder en caso de que la misma resultara por algún motivo defectuosa.
+    </p>
 
-        <p><strong>Envíos a domicilio</strong></p>
-        <p>El servicio de entrega a domicilio tendrá un costo, que aparecerá expresado y diferenciado en la etapa del proceso de llenado del carrito previa a la emisión de su pedido. Dicho costo se añadirá al de las mercaderías detalladas en la correspondiente factura. La confirmación del pedido y la aprobación de la emisión de la factura, implicarán la aceptación del Usuario del costo del servicio de entrega a domicilio y consecuentemente también el monto total de la correspondiente factura.
+    <p><strong>Envíos a domicilio</strong></p>
+    <p>El servicio de entrega a domicilio tendrá un costo, que aparecerá expresado y diferenciado en la etapa del proceso de llenado del carrito previa a la emisión de su pedido. Dicho costo se añadirá al de las mercaderías detalladas en la correspondiente factura. La confirmación del pedido y la aprobación de la emisión de la factura, implicarán la aceptación del Usuario del costo del servicio de entrega a domicilio y consecuentemente también el monto total de la correspondiente factura.
 
-        En el domicilio de entrega podrá recibir la compra cualquier persona mayor a 18 años, mostrando su DNI.
+    En el domicilio de entrega podrá recibir la compra cualquier persona mayor a 18 años, mostrando su DNI.
 
-        No se entregan productos en consignación. No se realizan cobros a domicilio contra entrega del producto, sin excepción.
+    No se entregan productos en consignación. No se realizan cobros a domicilio contra entrega del producto, sin excepción.
 
-        CODE CRAFTERS se reserva el derecho de modificar unilateralmente la presentación y configuración del Sitio Web, así como los correspondientes servicios y condiciones requeridas para su uso, sin que de ello se derive derecho alguno de compensación a favor del usuario.
-        </p>
+    THE CODECRAFTERS se reserva el derecho de modificar unilateralmente la presentación y configuración del Sitio Web, así como los correspondientes servicios y condiciones requeridas para su uso, sin que de ello se derive derecho alguno de compensación a favor del usuario.
+    </p>
 </body>
 </html>
