--- a/envios.html
+++ b/envios.html
@@ -16,8 +16,9 @@
         <li>DNI de la persona autorizada a retirar el pedido.</li>	
         <li>Mail de confirmación de compra, que incluye el número de pedido.</li>	
         <li>Medios de contacto con THE CODECRAFTERS.</li>	
-        <li>En compras online de sábado, domingos y feriados, los pedidos podrán ser retirados   el día hábil siguiente, en los horarios de atención de CODE CRAFTERS, una vez que reciba el email de confirmación de su compra.</li><br>
+        <li>En compras online de sábado, domingos y feriados, los pedidos podrán ser retirados el día hábil siguiente, en los horarios de atención de CODECRAFTERS, una vez que reciba el email de confirmación de su compra.</li>
     </ul>
+   
     En el acto de la entrega se le exhibirá al cliente el estado de la mercadería y los accesorios que vienen con esta, debiendo el comprador (o la persona autorizada por este, en su caso) verificar que la mercadería entregada corresponde a los artículos incluidos en el pedido y en la factura que se le presentará en el acto de entrega. La firma del remito y/o el comprobante de pago implicará declaración de conformidad con la mercadería entregada, sin perjuicio de los derechos que le pudieren corresponder en caso de que la misma resultara por algún motivo defectuosa.
     </p>
 
