--- a/seccion4.html
+++ b/seccion4.html
@@ -101,8 +101,7 @@
                         <li><i class="fas fa-phone"></i> (444) 444 444 444</li>
                         <li><i class="fas fa-envelope-open-text"></i> codecrafters@website.com</li>
                     </ul>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero provident ipsam necessitatibus
-                        repellendus?</p>
+                    <p>Somos expertos en insumos informáticos con una década de liderazgo en el mercado tecnológico especializado.</p>
                     <p>CodeCrafters.com</p>
                 </div>
             </div>
