--- a/seccion4.html
+++ b/seccion4.html
@@ -102,7 +102,7 @@
                         <li><i class="fas fa-envelope-open-text"></i> codecrafters@website.com</li>
                     </ul>
                     <p>Somos expertos en insumos informáticos con una década de liderazgo en el mercado tecnológico especializado.</p>
-                    <p>CodeCrafters.com</p>
+                    <p>TheCodeCrafters.netlify.app</p>
                 </div>
             </div>
         </div>
