--- a/garantia.html
+++ b/garantia.html
@@ -35,7 +35,7 @@
 
     <p>Para el cumplimiento de la garantía, el cliente deberá comunicarse previamente con el servicio de POSTVENTA por
         mensaje de WhatsApp al teléfono 11 1111-1111, llenando el formulario de POSTVENTA. También puede comunicarse a
-        info@codecrafters.com.ar.</p>
+        info@thecodecrafters.netlify.app/.</p>
 
     <p>El servicio de POSTVENTA evaluará el caso preliminarmente y confirmará al cliente si debe presentar el producto
         en nuestras oficinas. En ese caso, deberá presentarse el interesado con la documentación antes mencionada, y el
