--- a/login.html
+++ b/login.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles5.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" />
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Login</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -64,4 +66,5 @@
     </section>
     <script src="./app.js"></script>
 </body>
+
 </html>
