--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
             <p>En <a href="index.html">CodeCrafters</a>, respetamos su privacidad y nos comprometemos a proteger la
                 información
                 personal que pueda proporcionarnos mientras utiliza nuestro sitio web <a
-                    href="index.html">thecodecrafters.netlify.app</a>
+                    href="index.html">CodeCrafters.com</a>
                 y nuestros servicios relacionados. Esta Política de Privacidad describe cómo recopilamos, utilizamos y
                 protegemos la información que recopilamos.</p>
         </li>
@@ -74,7 +74,7 @@
         <li>
             <p><strong>8. Contacto</strong></p>
             <p>Si tiene alguna pregunta sobre esta Política de Privacidad, puede comunicarse con nosotros a través de <a
-                    href="soporte@thecodecrafters.netlify.app">soporte@thecodecrafters.netlify.app</a>.</p>
+                    href="soporte@thecodecrafters.netlify.app/">soporte@thecodecrafters.netlify.app</a>.</p>
         </li>
     </ol>
 </body>
