--- a/seccion4.html
+++ b/seccion4.html
@@ -99,10 +99,11 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> Buenos Aires</li>
                         <li><i class="fas fa-phone"></i> (444) 444 444 444</li>
-                        <li><i class="fas fa-envelope-open-text"></i> codecrafters@website.com</li>
+                        <li><i class="fas fa-envelope-open-text"></i> https://thecodecrafters.netlify.app/</li>
                     </ul>
-                    <p>Somos expertos en insumos informáticos con una década de liderazgo en el mercado tecnológico especializado.</p>
-                    <p>TheCodeCrafters.netlify.app</p>
+                    <p>Somos expertos en insumos informáticos con una década de liderazgo en el mercado tecnológico
+                        especializado. </p>
+                    <p>Thecodecrafters.netlify.app/</p>
                 </div>
             </div>
         </div>
