--- a/term.html
+++ b/term.html
@@ -36,7 +36,7 @@
         </li>
         <li>
             <p><strong>Uso Aceptable</strong></p>
-            <p>Usted acepta utilizar nuestro sitio web de manera legal y ética y no utilizarlo para ningún propósito
+            <p>TUsted acepta utilizar nuestro sitio web de manera legal y ética y no utilizarlo para ningún propósito
                 ilegal o no autorizado.</p>
         </li>
         <li>
