--- a/postventa.html
+++ b/postventa.html
@@ -19,48 +19,49 @@
 
 
         <form action="#" method="post">
-            <label for="nombre">Nombre y Apellido *:</label><br>
+            <label for="nombre">Nombre y Apellido *:</label>
             <input type="text" id="nombre" name="nombre" placeholder="Juan Perez" required><br><br>
 
-            <label for="dni_cuit">DNI o CUIT *:</label><br>
+            <label for="dni_cuit">DNI o CUIT *:</label>
             <input type="text" id="dni_cuit" name="dni_cuit" placeholder="11.111.111"><br><br>
 
-            <label for="telefono">Teléfono *:</label><br>
+            <label for="telefono">Teléfono *:</label>
             <input type="tel" id="telefono" name="telefono" placeholder="Teléfono"><br><br>
 
-            <label for="domicilio">Domicilio *:</label><br>
+            <label for="domicilio">Domicilio *:</label>
             <input type="text" id="domicilio" name="domicilio" placeholder="Av. San Martin 465"><br><br>
 
-            <label for="localidad">Localidad *:</label><br>
+            <label for="localidad">Localidad *:</label>
             <input type="text" id="localidad" name="localidad" placeholder="Bransen"><br><br>
 
-            <label for="provincia">Provincia *:</label><br>
+            <label for="provincia">Provincia *:</label>
             <input type="text" id="provincia" name="provincia" placeholder="La Pampa"><br><br>
 
-            <label for="email">Email *:</label><br>
+            <label for="email">Email *:</label>
             <input type="email" id="email" name="email" placeholder="nombre@ejemplo.com" required><br><br>
 
-            <label for="fecha_compra">Fecha de Compra *:</label><br>
+            <label for="fecha_compra">Fecha de Compra *:</label>
             <input type="date" id="fecha_compra" name="fecha_compra"><br><br>
 
-            <label for="id_pedido">ID de Pedido:</label><br>
+            <label for="id_pedido">ID de Pedido:</label>
             <input type="text" id="id_pedido" name="id_pedido"><br><br>
 
 
-            <label for="numero_factura">Nº de Factura *:</label><br>
+            <label for="numero_factura">Nº de Factura *:</label>
             <input type="text" id="numero_factura" name="numero_factura"><br><br>
 
-            <label for="tipo_factura">Tipo de Factura *:</label><br>
+            <label for="tipo_factura">Tipo de Factura *:</label>
             <input type="text" id="tipo_factura" name="tipo_factura"><br><br>
 
 
-            <label for="producto">Producto *:</label><br>
+            <label for="producto">Producto *:</label>
             <input type="text" id="producto" name="producto" placeholder="Tipo de Producto"><br><br>
 
-            <label for="detalle_falla">Detalle de la Falla *:</label><br>
-            <textarea id="detalle_falla" name="detalle_falla" rows="4"></textarea><br><br>
+            <label for="detalle_falla">Detalle de la Falla *:</label>
+            <textarea id="detalle_falla" name="detalle_falla" rows="4"
+                placeholder="Detalla aquí la falla del producto"></textarea><br><br>
 
-            <label for="imagen_problema">Imagen del problema *:</label><br>
+            <label for="imagen_problema">Imagen del problema *:</label>
             <input type="file" id="imagen_problema" name="imagen_problema" accept="image/*"><br><br>
 
             <input type="submit" value="Enviar">
