--- a/seccion3.html
+++ b/seccion3.html
@@ -200,7 +200,8 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>La decodificación de los píxeles en tu pantalla te harán ver hasta los detalles más ínfimos en cada
+                    ilustración.</p>
                 <div class="price">$235.000</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -220,7 +221,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Es ideal para trabajar con aplicaciones gráficas ya que permite obtener imágenes más nítidas.</p>
                 <div class="price">$126.000</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -240,7 +241,8 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Con una velocidad de memoria de 7108 MHz los datos del procesador central se van a traducir en
+                    información comprensible en tan solo un abrir y cerrar de ojos.</p>
                 <div class="price">$203.230</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -260,7 +262,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Es ideal para jugadores y creadores de contenido que requieran un instrumento de gran ejecución.</p>
                 <div class="price">$316.230</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -280,7 +282,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Optimizá el rendimiento de tu máquina con la tecnología DDR4.</p>
                 <div class="price">$232.169</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -300,7 +302,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Cuenta con una tasa de transferencia de 25600 MB/s.</p>
                 <div class="price">523.213</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -320,7 +322,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>FUENTE GAMEMAX VP 800 800W 80 PLUS BRONZE RGB</p>
                 <div class="price">$612.666</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -340,7 +342,8 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Esta fuente ATX cuenta con 9 conectores SATA para que puedas conectar todos tus dispositivos y
+                    periféricos sin problemas.</p>
                 <div class="price">$615.268</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -360,7 +363,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Puedes usar esta fuente de alimentación para construir casi cualquier sistema que desees.</p>
                 <div class="price">$322.355</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -380,7 +383,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Capacidad de almacenamiento de 240 GB para guardar gran cantidad de archivos y programas.</p>
                 <div class="price">$355.622</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -400,7 +403,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Más espacio en tu PC con su factor de forma M.2 2280.</p>
                 <div class="price">$121.320</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -420,7 +423,7 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Útil para guardar programas y documentos con su capacidad de 1 TB.</p>
                 <div class="price">$123.456</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -440,7 +443,8 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Personalizalo a tu gusto y disfrutá de tus videojuegos o hacé que la renderización de imágenes sea
+                    más ágil.</p>
                 <div class="price">$352.625</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
@@ -460,7 +464,8 @@
                     <i class="fas fa-star-half-alt"></i>
                     <span>( 250 )</span>
                 </div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, dolorem.</p>
+                <p>Ejecuta con rapidez y eficiencia cualquier tipo de programa sin afectar el funcionamiento total del
+                    dispositivo.</p>
                 <div class="price">$152.320</div>
                 <div class="buttons">
                     <a href="#" class="buy">Comprar</a>
