--- a/seccion2.html
+++ b/seccion2.html
@@ -175,7 +175,7 @@
                             <img src="./testimoniosimage/img5.webp" alt="imagen">
                             <div class="text-box">
                                 <h3 class="testname">Laura López</h3>
-                                <span class="job">Gammer</span>
+                                <span class="job">Estudiante y Gammer</span>
                             </div>
                         </div>
                         <p>¡Esta página es increíble para los gamers como yo! Sus productos informáticos potencian mi
