--- a/seccion3.html
+++ b/seccion3.html
@@ -511,6 +511,23 @@
                     <li><a href="tazas.html">Tazas</a></li>
                 </ul>
             </div>
+
+            <div class="link">
+                <ul>
+                    <li>
+                        <a href="Trabaja_con_nosotros.html">
+                            <h3>Trabaja con nosotros</h3>
+                        </a>
+                    </li>
+                </ul>
+                <p>
+                <a>Si queres ser un CodeCrafter accedé <br> a nuestra bolsa de trabajo.<br>
+                    Tenemos puestos vacantes y vos <br> podes formar parte de nuestro gran staff. <br>
+                    <h4>Que estas esperando!!</h4>
+                </a>
+                </p>
+            </div>
+            
             <div class="link">
                 <h3>Siguenos</h3>
                 <div class="social-link">
